# chlorophyll-linux

./: CITATION.cff  CMakeLists.txt  README.md  build.sh  chlor-dada.csv  old  readme.md  run.sh  start.sh
include/: chloro.h  output.h  probe_data.h  proc.h
lib/: chloro.cpp  output.cpp  proc.cpp
sources/: chloro
src/: chloro.cpp  main.cpp  output.cpp  proc.cpp
temp/: readme.md  task.txt  var01.cpp  var02.cpp  var03.cpp
tests/: CMakeLists.txt  test.sh  test_chloro.cpp
